# YOLO

./: .gitignore  README.md  pyproject.toml  pytest.ini
model/: __init__.py
src/: constants.py  data_manager.py  example.py  model_handler.py  strategies.py  utils.py  visualizer.py
src/data/: dataset.py  transform_data.py
src/model/: loss.py  model.py  train.py
src/template_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: final_tests.py  test_data_manager.py  test_model_handler.py  test_strategies.py  test_visualizer.py
